--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fullcalendar/interaction": "6.1.8",
     "@fullcalendar/react": "6.1.8",
     "@fullcalendar/timegrid": "6.1.8",
+    "@types/react-icons": "^3.0.0",
     "date-fns": "^4.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
